# valdac

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post_create.sh
src/valdac/: __init__.py  mixin.py
