[tool.poetry]
name = "valdac"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "valdac", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
beartype = "^0.18.5"
dataclasses-json = "^0.6.7"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
